--- a/packages/api/requirements.txt
+++ b/packages/api/requirements.txt
@@ -9,4 +9,4 @@ python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
 python-dotenv>=1.0.0
 httpx>=0.24.0
-clerk-backend-api>=3.0.0
+clerk-sdk-python>=1.0.0
