--- a/packages/api/vercel.json
+++ b/packages/api/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "main_simple.py",
+      "src": "main.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/main_simple.py"
+      "dest": "/main.py"
     }
   ],
   "env": {
